style(layout): enlarge gap between sidebar and content; ensure left column does not clear floats

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -22,6 +22,7 @@
     @include span(9 of 12);
     @include prefix(0 of 12);
     @include suffix(0 of 12);
+    @include nobreak();
   }
 
   .page__inner-wrap {
